Fixes unit tests